Implemented user/progress APIs
